--- a/20151210/index.html
+++ b/20151210/index.html
@@ -93,8 +93,8 @@
 						<img src="back-end-mvc.png" alt="" />
 					</section>
 					<section>
-						 <h2>前端：我能干什么？<br>
-						 后端：去套页面</h2>
+						 <h2>前端：我能干什么？</h2>
+						 <h2 class="fragment">后端：去套页面</h2>
 					</section>
 					<section>
 						。。。
