--- a/20151210/index.html
+++ b/20151210/index.html
@@ -60,9 +60,10 @@
 					</p>
 
 					<ul style="font-size: .65em">
-						<li>Web 开发者</li>
-						<li>计算机学院 2014 级本科</li>
+						<li>Web 开发</li>
+						<li>计算机学院 2014 级</li>
 						<li>星辰工作室、凝聚工作室成员</li>
+                        <li>长亭科技实习生</li>
 					</ul>
 				</section>
 
@@ -77,7 +78,7 @@
 						<h1>页面仔</h1>
 					</section>
 					<section>
-						...
+						<h1>...</h1>
 					</section>
 					<section>
 						<img src="cry.jpg" width="60%" alt="" />
